[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CommonNeighborhoodParameter"
version = "1.0.0"
description = "An OVITO modifier computing the common neighborhood parameter (CNP) for each particle in a simulation"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Alexander Stukowski", email = "stukowski@ovito.org"}, {name = "Paulo Branicio", email = "branicio@usc.edu"}]
maintainers = [{name = "Alexander Stukowski", email = "stukowski@ovito.org"}, {name = "Paulo Branicio", email = "branicio@usc.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
]

[project.urls]
repository = "https://github.com/ovito-org/CommonNeighborhoodParameter"

[project.entry-points.'OVITO.Modifier']
"Common Neighborhood Parameter" = "CommonNeighborhoodParameter:CommonNeighborhoodParameterModifier"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]